--- a/ProcessResults.ipynb
+++ b/ProcessResults.ipynb
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load case recipe\n",
     "\n",
-    "json_location = \"./projects/AirportRd/P2/recipe.json\"\n",
+    "json_location = \"./projects/AirportRd/P3/recipe.json\"\n",
     "reload = False\n",
     "output_directory = os.path.dirname(os.path.dirname(json_location))\n",
     "\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +201,7 @@
     "    if __name__ ==  '__main__': \n",
     "        p=Pool(processes=n_split)\n",
     "        output = p.map(gnd_worker.mrt_parallel, dicts)\n",
+    "        p.close()\n",
     "\n",
     "    # Restack results\n",
     "    mean_radiant_temperature = np.vstack(output)\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,6 +272,7 @@
     "    if __name__ ==  '__main__': \n",
     "        p=Pool(processes=n_split)\n",
     "        output = p.map(gnd_worker.utci_parallel, dicts)\n",
+    "        p.close()\n",
     "\n",
     "    # Restack results\n",
     "    universal_thermal_climate_index = np.vstack(output)\n",
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,9 +310,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ground surface temperature simulation completed\n",
+      "EnergyPlus results loaded\n",
+      "Surface temperature calculated for concrete\n",
+      "Direct and diffuse solar radiation simulation completed\n",
+      "Radiance results loaded\n",
+      "Mean radiant temperature calculated [0.07 seconds]\n",
+      "MRT file written to projects\\AirportRd\\openfield/openfield.mrt\n",
+      "Universal thermal climate index calculated [0.10 seconds]\n",
+      "UTCI file written to projects\\AirportRd\\openfield/openfield.utci\n"
+     ]
+    }
+   ],
    "source": [
     "# Simulate open field MRT and UTCI and write to file\n",
     "\n",
@@ -329,9 +347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating UTCI comfort levels\n",
+      "Calculating UTCI openfield reduction levels\n"
+     ]
+    }
+   ],
    "source": [
     "# Construct results object\n",
     "\n",
@@ -340,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,9 +381,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_annual_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_annual_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_annual_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_may_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_may_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_may_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_october_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_october_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_comfort_october_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_annual_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_annual_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_annual_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_may_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_may_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_may_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_october_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_october_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_reduction_october_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_annual_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_annual_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_annual_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_may_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_may_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_may_morningafternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_october_morningshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_october_afternoonshoulder.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\_improvement_october_morningafternoonshoulder.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Plot comfort and reduction plan\n",
     "\n",
@@ -371,9 +432,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to ./projects/AirportRd/P3\\plots\\context.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\context_ptlabels.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Plot context plan\n",
     "\n",
@@ -383,9 +453,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to ./projects/AirportRd/P3\\plots\\focuspoints_location.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Review pt locations and choose focal pts for plotting\n",
     "\n",
@@ -405,9 +483,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1416_profile_may.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1416_profile_october.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1416_profile_mayoctober.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1516_profile_may.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1516_profile_october.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1516_profile_mayoctober.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1524_profile_may.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1524_profile_october.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1524_profile_mayoctober.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Plot UTCI day and heatmap comparison plots for focus pts\n",
     "\n",
@@ -419,9 +513,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to ./projects/AirportRd/P3\\plots\\openfield_comfortheatmap.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1416_comfortheatmap.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1516_comfortheatmap.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1524_comfortheatmap.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Plot comfort heatmaps for each pt\n",
     "\n",
@@ -434,9 +539,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1416_reductionheatmap.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1516_reductionheatmap.png\n",
+      "Plot saved to ./projects/AirportRd/P3\\plots\\pt1524_reductionheatmap.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Plot reduction heatmaps for each pt\n",
     "\n",
@@ -447,9 +562,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contour plots joined in ./projects/AirportRd/P3\\plots\\_comfort__collection.png\n",
+      "Contour plots joined in ./projects/AirportRd/P3\\plots\\_reduction__collection.png\n",
+      "Contour plots joined in ./projects/AirportRd/P3\\plots\\_improvement__collection.png\n",
+      "Point plots joined in ./projects/AirportRd/P3\\plots\\pt1416_collected.png\n",
+      "Point plots joined in ./projects/AirportRd/P3\\plots\\pt1516_collected.png\n",
+      "Point plots joined in ./projects/AirportRd/P3\\plots\\pt1524_collected.png\n"
+     ]
+    }
+   ],
    "source": [
     "# Tile images for ease of inserting into Word!\n",
     "\n",
@@ -526,9 +654,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Annual</th>\n",
+       "      <th>May</th>\n",
+       "      <th>October</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>07:00-10:00</th>\n",
+       "      <td>0.148630</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.137097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16:00-19:00</th>\n",
+       "      <td>0.432192</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.282258</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Annual   May   October\n",
+       "07:00-10:00  0.148630  0.25  0.137097\n",
+       "16:00-19:00  0.432192  0.50  0.282258"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# pd.Series(utci.df_utci_reduction.between_time(\"16:00\", \"19:00\").values.flatten()).plot(kind=\"hist\")\n",
     "\n",
@@ -586,9 +768,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open field</th>\n",
+       "      <th>UTCI</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Annual</th>\n",
+       "      <th>May</th>\n",
+       "      <th>October</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Comfort</td>\n",
+       "      <td>9-26</td>\n",
+       "      <td>07:00-10:00</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>8.064516</td>\n",
+       "      <td>13.709677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Comfort</td>\n",
+       "      <td>9-26</td>\n",
+       "      <td>16:00-19:00</td>\n",
+       "      <td>30.904110</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Comfort + slight heat stress</td>\n",
+       "      <td>9-28</td>\n",
+       "      <td>07:00-10:00</td>\n",
+       "      <td>46.575342</td>\n",
+       "      <td>16.935484</td>\n",
+       "      <td>28.225806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Comfort + slight heat stress</td>\n",
+       "      <td>9-28</td>\n",
+       "      <td>16:00-19:00</td>\n",
+       "      <td>36.383562</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.580645</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Open field  UTCI         Time     Annual        May  \\\n",
+       "0                       Comfort  9-26  07:00-10:00  40.000000   8.064516   \n",
+       "1                       Comfort  9-26  16:00-19:00  30.904110   0.000000   \n",
+       "2  Comfort + slight heat stress  9-28  07:00-10:00  46.575342  16.935484   \n",
+       "3  Comfort + slight heat stress  9-28  16:00-19:00  36.383562   0.000000   \n",
+       "\n",
+       "     October  \n",
+       "0  13.709677  \n",
+       "1   0.000000  \n",
+       "2  28.225806  \n",
+       "3   2.580645  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate Openfield sumary\n",
     "\n",
