--- a/ReProcessResults_SummaryTable.ipynb
+++ b/ReProcessResults_SummaryTable.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +155,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Morning</th>\n",
+       "      <th>07:00 - 10:00</th>\n",
        "      <td>43.470320</td>\n",
        "      <td>51.612903</td>\n",
        "      <td>47.849462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Afternoon</th>\n",
+       "      <th>16:00 - 19:00</th>\n",
        "      <td>87.726027</td>\n",
        "      <td>91.612903</td>\n",
        "      <td>94.838710</td>\n",
@@ -171,56 +171,18 @@
        "</div>"
       ],
       "text/plain": [
-       "              Annual        May    October\n",
-       "Morning    43.470320  51.612903  47.849462\n",
-       "Afternoon  87.726027  91.612903  94.838710"
+       "                  Annual        May    October\n",
+       "07:00 - 10:00  43.470320  51.612903  47.849462\n",
+       "16:00 - 19:00  87.726027  91.612903  94.838710"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "utci.reduction_summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# Generate summary table metrics for case\n",
-    "threshold = 4\n",
-    "quant = 0.95\n",
-    "\n",
-    "varz = [\n",
-    "    [(utci.masks[\"Annual\"] & utci.masks[\"Morning\"]), [\"Annual\", \"Morning\"]], \n",
-    "    [(utci.masks[\"Annual\"] & utci.masks[\"Afternoon\"]), [\"Annual\", \"Afternoon\"]], \n",
-    "    [(utci.masks[\"May\"] & utci.masks[\"Morning\"]), [\"May\", \"Morning\"]], \n",
-    "    [(utci.masks[\"May\"] & utci.masks[\"Afternoon\"]), [\"May\", \"Afternoon\"]], \n",
-    "    [(utci.masks[\"October\"] & utci.masks[\"Morning\"]), [\"October\", \"Morning\"]], \n",
-    "    [(utci.masks[\"October\"] & utci.masks[\"Afternoon\"]), [\"October\", \"Afternoon\"]], \n",
-    "]\n",
-    "\n",
-    "# Create the \"nth percentile\" point\n",
-    "temp = reduction.quantile(quant, axis=1)\n",
-    "\n",
-    "# Get the number of hours within specified ranges where threshold reduction is met\n",
-    "d = {\n",
-    "    \"Annual\": {\"Morning\": None, \"Afternoon\": None},\n",
-    "    \"May\": {\"Morning\": None, \"Afternoon\": None},\n",
-    "    \"October\": {\"Morning\": None, \"Afternoon\": None}\n",
-    "}\n",
-    "for i, [j, k] in varz:\n",
-    "    temp_filtered = temp[i]\n",
-    "    d[j][k] = ((temp_filtered >= threshold).sum() / temp_filtered.count())\n",
-    "temp_result = (pd.DataFrame.from_dict(d) * 100).round(1)\n",
-    "\n",
-    "temp_result.to_clipboard(header=False, excel=True, index=False)\n"
    ]
   },
   {
@@ -279,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 228,
    "metadata": {
     "scrolled": true
    },
@@ -344,8 +306,70 @@
    ],
    "source": [
     "# Generate UTCI object\n",
-    "utci = tc.plot.UTCI(utci_of, utci_loaded.T, points)\n",
-    "reduction = utci.df_utci_reduction"
+    "utci = tc.plot.UTCI(utci_of, utci_loaded.T, points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Annual</th>\n",
+       "      <th>May</th>\n",
+       "      <th>October</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>07:00 - 10:00</th>\n",
+       "      <td>21.689498</td>\n",
+       "      <td>32.795699</td>\n",
+       "      <td>17.204301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16:00 - 19:00</th>\n",
+       "      <td>85.753425</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>93.548387</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Annual         May    October\n",
+       "07:00 - 10:00  21.689498   32.795699  17.204301\n",
+       "16:00 - 19:00  85.753425  100.000000  93.548387"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utci.reduction_summary()"
    ]
   },
   {
