documented oshe methods

--- a/ProcessResults1.ipynb
+++ b/ProcessResults1.ipynb
@@ -138,7 +138,7 @@
     "# Calculate surrounding surface temperature (including sky)\n",
     "if not reload:\n",
     "    # Calculate generic sky temperature\n",
-    "    sktemp = tc.oshe.calc_sky_temperature(hir)\n",
+    "    sktemp = tc.oshe.sky_temperature(hir)\n",
     "\n",
     "    # Append sky temperature and air temperature onto end of surface temperatures\n",
     "    all_srf_temps = np.vstack([surface_temperatures, sktemp, dbt])\n",
