Added multithread utci and mrt methods, plus example

--- a/ProcessResults1.ipynb
+++ b/ProcessResults1.ipynb
@@ -40,53 +40,41 @@
     "from ladybug.epw import EPW\n",
     "from ladybug.sunpath import Sunpath\n",
     "\n",
-    "import oshe as tc\n",
-    "idd_file = r\"C:\\openstudio-2.7.0\\EnergyPlus\\Energy+.idd\""
+    "import oshe as tc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load case recipe\n",
-    "\n",
-    "json_location = r\"C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\projects\\MUNICIPALITY\\MUNICIPALITY\\recipe.json\"\n",
-    "reload = True\n",
-    "output_directory = os.path.dirname(os.path.dirname(json_location))\n",
-    "\n",
-    "# Create output directory for generated images\n",
-    "plot_directory = os.path.join(os.path.dirname(json_location), \"plots\")\n",
-    "if not os.path.exists(plot_directory):\n",
-    "    os.mkdir(plot_directory)\n",
-    "\n",
-    "# Load JSON\n",
-    "d = tc.helpers.load_json(json_location)"
+    "idd_file = r\"C:\\openstudio-2.7.0\\EnergyPlus\\Energy+.idd\"\n",
+    "epw_file = r\"C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\projects\\UWG_ARE_AZ_Abu.Dhabi-Bateen.Exec.AP.412160_TMYx_URBAN_02.epw\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load weatherfile data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2004, 3) (8760,) (8760,) (8760,) (8760,) (8760,) (2004, 178) (2004, 1) (2004, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Load data referenced during processing\n",
-    "\n",
     "# Load epw\n",
-    "epw_file = d[\"epw\"]\n",
     "epw = EPW(epw_file)\n",
-    "\n",
-    "# Load points\n",
-    "points = np.array(d[\"points\"])\n",
     "\n",
     "# Get climate variables\n",
     "dbt = np.array(epw.dry_bulb_temperature.values)\n",
@@ -96,7 +84,93 @@
     "\n",
     "# Calculate hourly solar altitudes and hir for input\n",
     "sun_path = Sunpath.from_location(epw.location)\n",
-    "sun_altitude = np.array([sun_path.calculate_sun_from_hoy(i).altitude for i in range(8760)])\n",
+    "sun_altitude = np.array([sun_path.calculate_sun_from_hoy(i).altitude for i in range(8760)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Open-field MRT and UTCI calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ground surface temperature simulation completed\n",
+      "EnergyPlus results loaded\n",
+      "Writing recipe contents to: C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield\\gridbased_annual\n",
+      "Calculating solar values...\n",
+      "# Number of sun up hours: 4423\n",
+      "Writing sun matrix to C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield\\gridbased_annual\\sky\\sunmtx.smx\n",
+      "Direct and diffuse solar radiation simulation completed\n",
+      "Radiance results loaded\n",
+      "Mean radiant temperature calculated [0.06 seconds]\n",
+      "Universal thermal climate index calculated [0.11 seconds]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define ground material\n",
+    "gnd_mat = tc.material.material_dict[\"CONCRETE\"]\n",
+    "ground_zone = tc.geometry.Ground(gnd_mat, xy=5, depth=1.5, subsurface_size=5)\n",
+    "\n",
+    "# Calculate ground surface temperature\n",
+    "of_srf_temp = tc.energyplus.run_energyplus(epw_file, idd_file, ground=ground_zone, shades=None, run=True)\n",
+    "\n",
+    "# Calculate incident solar direct and diffuse radiation\n",
+    "of_dir_rad, of_dif_rad = tc.radiance.run_radiance(epw_file, ground=ground_zone, shades=None, run=True)\n",
+    "\n",
+    "# Calculate MRT\n",
+    "of_mrt = tc.mrt.mean_radiant_temperature(surrounding_surfaces_temperature=of_srf_temp[0], horizontal_infrared_radiation_intensity=hir, diffuse_horizontal_solar=of_dif_rad.T[0], direct_normal_solar=of_dir_rad.T[0], sun_altitude=sun_altitude, ground_reflectivity=gnd_mat.reflectivity, sky_exposure=1, radiance=True)[0]\n",
+    "\n",
+    "# Calculate UTCI\n",
+    "of_utci = tc.utci.universal_thermal_climate_index(dbt, of_mrt, ws, rh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Post-process Rhino/GH case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EnergyPlus results loaded\n",
+      "Radiance results loaded\n",
+      "View-factored surface temperatures calculated\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load case recipe\n",
+    "recipe = \"./projects/EXAMPLE/recipe.json\"\n",
+    "reload = False\n",
+    "\n",
+    "# Create output directory for generated images\n",
+    "output_directory = os.path.dirname(os.path.dirname(recipe))\n",
+    "plot_directory = os.path.join(os.path.dirname(recipe), \"plots\")\n",
+    "if not os.path.exists(plot_directory):\n",
+    "    os.mkdir(plot_directory)\n",
+    "\n",
+    "# Load JSON\n",
+    "d = tc.helpers.load_json(recipe)\n",
     "\n",
     "# Load surface view factors\n",
     "surface_view_factors = np.array(d[\"surface_view_factors\"])\n",
@@ -110,38 +184,18 @@
     "# Load plot tricontour plot \n",
     "boundary = np.array(d[\"boundary\"])[:, :-1]\n",
     "\n",
-    "print(points.shape, dbt.shape, rh.shape, ws.shape, hir.shape, sun_altitude.shape, surface_view_factors.shape, sky_view_factors.shape, ground_reflectivities.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if not reload:\n",
-    "    # Read EnergyPlus annual ourly surface temperature results\n",
+    "    # Read EnergyPlus annual hourly surface temperature results\n",
     "    surface_temperatures = tc.helpers.load_energyplus_results(d[\"eplus_results\"])\n",
     "\n",
     "    # Read Radiance simulation annual hourly incident radiation results\n",
     "    radiation_direct, radiation_diffuse = tc.helpers.load_radiance_results(d[\"radiation_results\"])\n",
     "    \n",
-    "    print(surface_temperatures.shape, radiation_direct.shape, radiation_diffuse.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate surrounding surface temperature (including sky)\n",
-    "if not reload:\n",
     "    # Calculate generic sky temperature\n",
-    "    sktemp = tc.oshe.sky_temperature(hir)\n",
+    "    skytemp = tc.oshe.sky_temperature(hir)\n",
     "\n",
     "    # Append sky temperature and air temperature onto end of surface temperatures\n",
-    "    all_srf_temps = np.vstack([surface_temperatures, sktemp, dbt])\n",
+    "    all_srf_temps = np.vstack([surface_temperatures, skytemp, dbt])\n",
     "\n",
     "    # Append sky view factor to end of surface view factors\n",
     "    all_vfs = np.hstack([surface_view_factors, sky_view_factors])\n",
@@ -155,28 +209,54 @@
     "\n",
     "    # Calculate overall surrounding surface temperature using view factors and individual surface temperatures\n",
     "    surrounding_surface_temperatures = np.power(np.matmul(all_vfs.T, np.power(all_srf_temps.T + 273.15, 4).T), 0.25) - 273.15\n",
-    "    \n",
-    "    print(surrounding_surface_temperatures.shape)"
+    "    print(\"View-factored surface temperatures calculated\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate MRT and write to file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MRT reloaded from C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\projects\\MUNICIPALITY\\MUNICIPALITY\\result.mrt\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "if not reload:\n",
+    "    mean_radiant_temperature = tc.mrt.mrt_parallel(\n",
+    "        threads=8, \n",
+    "        surrounding_surfaces_temperature=surrounding_surface_temperatures, \n",
+    "        horizontal_infrared_radiation_intensity=hir, \n",
+    "        diffuse_horizontal_solar=radiation_diffuse, \n",
+    "        direct_normal_solar=radiation_direct, \n",
+    "        sun_altitude=sun_altitude, \n",
+    "        ground_reflectivity=ground_reflectivities, \n",
+    "        sky_exposure=sky_view_factors, \n",
+    "        radiance=True\n",
+    "    )\n",
+    "\n",
+    "    # Write to file\n",
+    "    df_mrt = pd.DataFrame(mean_radiant_temperature.T)\n",
+    "    df_mrt.round(6).to_csv(os.path.join(os.path.dirname(recipe), \"result.mrt\"), index=False)\n",
+    "else:\n",
+    "    mean_radiant_temperature = pd.read_csv(os.path.join(os.path.dirname(recipe), \"result.mrt\")).values.T\n",
+    "    print(\"MRT reloaded from {}\".format(os.path.join(os.path.dirname(recipe), \"result.mrt\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import gnd_worker\n",
     "from multiprocessing import Pool\n",
     "\n",
-    "# Calculate MRT and write to file\n",
+    "\n",
     "\n",
     "if not reload:\n",
     "\n",
@@ -203,11 +283,11 @@
     "\n",
     "    # Write to file\n",
     "    df_mrt = pd.DataFrame(mean_radiant_temperature.T)\n",
-    "    df_mrt.round(6).to_csv(os.path.join(os.path.dirname(json_location), \"result.mrt\"), index=False)\n",
+    "    df_mrt.round(6).to_csv(os.path.join(os.path.dirname(recipe), \"result.mrt\"), index=False)\n",
     "    \n",
     "else:\n",
-    "    mean_radiant_temperature = pd.read_csv(os.path.join(os.path.dirname(json_location), \"result.mrt\")).values.T\n",
-    "    print(\"MRT reloaded from {}\".format(os.path.join(os.path.dirname(json_location), \"result.mrt\")))"
+    "    mean_radiant_temperature = pd.read_csv(os.path.join(os.path.dirname(recipe), \"result.mrt\")).values.T\n",
+    "    print(\"MRT reloaded from {}\".format(os.path.join(os.path.dirname(recipe), \"result.mrt\")))"
    ]
   },
   {
