Fixed Radiance result read method to be be version agnostic

--- a/Postprocess.ipynb
+++ b/Postprocess.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "idd_file = r\"C:\\openstudio-2.7.0\\EnergyPlus\\Energy+.idd\"\n",
-    "epw_file = r\"C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\projects\\UWG_ARE_AZ_Abu.Dhabi-Bateen.Exec.AP.412160_TMYx_URBAN_02.epw\""
+    "epw_file = r\"./example/weatherfile.epw\""
    ]
   },
   {
@@ -113,8 +113,8 @@
       "Writing sun matrix to C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield\\gridbased_annual\\sky\\sunmtx.smx\n",
       "Direct and diffuse solar radiation simulation completed\n",
       "Radiance results loaded\n",
-      "Mean radiant temperature calculated [0.07 seconds]\n",
-      "Universal thermal climate index calculated [0.11 seconds]\n"
+      "Mean radiant temperature calculated [0.06 seconds]\n",
+      "Universal thermal climate index calculated [0.09 seconds]\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -368,14 +368,14 @@
       "Plot saved to ./projects/EXAMPLE\\plots\\reduction_october_morningshoulder.png\n",
       "Plot saved to ./projects/EXAMPLE\\plots\\reduction_october_afternoonshoulder.png\n",
       "Plot saved to ./projects/EXAMPLE\\plots\\reduction_october_morningafternoonshoulder.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0000_reductionheatmap.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0000_comfortheatmap.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0000_profile_may.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0000_profile_october.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0001_reductionheatmap.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0001_comfortheatmap.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0001_profile_may.png\n",
-      "Plot saved to ./projects/EXAMPLE\\plots\\pt0001_profile_october.png\n"
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0017_reductionheatmap.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0017_comfortheatmap.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0017_profile_may.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0017_profile_october.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0044_reductionheatmap.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0044_comfortheatmap.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0044_profile_may.png\n",
+      "Plot saved to ./projects/EXAMPLE\\plots\\pt0044_profile_october.png\n"
      ]
     }
    ],
@@ -384,10 +384,17 @@
     "    r\"C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\projects\\EXAMPLE\\gridbased_annual\\scene\\glazing\\EXAMPLE..glz.rad\",\n",
     "    r\"C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\projects\\EXAMPLE\\gridbased_annual\\scene\\opaque\\EXAMPLE..opq.rad\"\n",
     "]\n",
-    "focus_pts = [0, 1]\n",
+    "focus_pts = [17, 44]\n",
     "\n",
     "utci.generate_plots(rad_files, focus_pts, boundary, plot_directory)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
