Fixed images and added summary example in notebook

--- a/Postprocess.ipynb
+++ b/Postprocess.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -391,10 +391,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Annual</th>\n",
+       "      <th>May</th>\n",
+       "      <th>October</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>07:00 - 10:00</th>\n",
+       "      <td>0.639726</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.604839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16:00 - 19:00</th>\n",
+       "      <td>0.154521</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.006452</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Annual   May   October\n",
+       "07:00 - 10:00  0.639726  0.75  0.604839\n",
+       "16:00 - 19:00  0.154521  0.20  0.006452"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create summary of time-period-wise UTCI reduction meeting threshold value (for the nth percentile specified)\n",
+    "utci.reduction_summary(threshold=4, percentile=0.9)"
+   ]
   }
  ],
  "metadata": {
