--- a/Postprocess.ipynb
+++ b/Postprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -30,17 +30,17 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\n",
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:95% !important; }</style>\"))\n",
     "\n",
-    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from ladybug.epw import EPW\n",
+    "pd.plotting.register_matplotlib_converters()\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import dates, ticker\n",
     "\n",
+    "from ladybug.epw import EPW\n",
     "import oshe as tc"
    ]
   },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,10 +78,10 @@
     "epw = EPW(epw_file)\n",
     "\n",
     "# Get climate variables\n",
-    "dbt = np.array(epw.dry_bulb_temperature.values)\n",
-    "rh = np.array(epw.relative_humidity.values)\n",
-    "ws = np.array(epw.wind_speed.values)\n",
-    "hir = np.array(epw.horizontal_infrared_radiation_intensity.values)\n",
+    "dbt = np.roll(np.array(epw.dry_bulb_temperature.values), -1)\n",
+    "rh = np.roll(np.array(epw.relative_humidity.values), -1)\n",
+    "ws = np.roll(np.array(epw.wind_speed.values), -1)\n",
+    "hir = np.roll(np.array(epw.horizontal_infrared_radiation_intensity.values), -1)\n",
     "\n",
     "# Calculate hourly solar altitudes\n",
     "sun_altitude = tc.helpers.sun_altitude(epw_file)"
