--- a/Postprocess_redo.ipynb
+++ b/Postprocess_redo.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -24,6 +16,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to load paths from C:\\Users\\tgerrish\\Miniconda3\\lib\\site-packages\\honeybee\\config.json.\n",
+      "Path to radiance is set to: c:/radiance\n"
+     ]
     }
    ],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -191,13 +191,13 @@
      "text": [
       "Ground surface temperature simulation completed\n",
       "EnergyPlus results loaded\n",
-      "Writing recipe contents to: C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield.py\\gridbased_annual\n",
+      "Writing recipe contents to: C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield\\gridbased_annual\n",
       "Calculating solar values...\n",
       "# Number of sun up hours: 4423\n",
-      "Writing sun matrix to C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield.py\\gridbased_annual\\sky\\sunmtx.smx\n",
+      "Writing sun matrix to C:\\Users\\tgerrish\\AppData\\Local\\Temp\\openfield\\gridbased_annual\\sky\\sunmtx.smx\n",
       "Direct and diffuse solar radiation simulation completed\n",
       "Radiance results loaded\n",
-      "Mean radiant temperature calculated [0.09 seconds]\n",
+      "Mean radiant temperature calculated [0.07 seconds]\n",
       "Universal thermal climate index calculated [0.10 seconds]\n"
      ]
     }
@@ -206,27 +206,14 @@
     "# SC method processing\n",
     "\n",
     "# Open-field MRT and UTCI calculation\n",
-    "\n",
-    "# Define ground material\n",
-    "gnd_mat = tc.material.material_dict[\"CONCRETE\"]\n",
-    "ground_zone = tc.geometry.Ground(gnd_mat, xy=5, depth=1.5, subsurface_size=5)\n",
-    "\n",
-    "# Calculate ground surface temperature\n",
-    "of_srf_temp = tc.energyplus.run_energyplus(epw_file, idd_file, ground=ground_zone, shades=None, run=True)\n",
-    "\n",
-    "# Calculate incident solar direct and diffuse radiation\n",
-    "of_dir_rad, of_dif_rad = tc.radiance.run_radiance(epw_file, ground=ground_zone, shades=None, run=True)\n",
-    "\n",
-    "# Calculate MRT\n",
-    "of_mrt = tc.mrt.mean_radiant_temperature(surrounding_surfaces_temperature=of_srf_temp[0], horizontal_infrared_radiation_intensity=hir, diffuse_horizontal_solar=of_dif_rad.T[0], direct_normal_solar=of_dir_rad.T[0], sun_altitude=sun_altitude, ground_reflectivity=gnd_mat.reflectivity, sky_exposure=1)[0]\n",
-    "\n",
-    "# Calculate UTCI\n",
-    "of_utci = tc.utci.universal_thermal_climate_index(dbt, of_mrt, ws, rh)"
+    "of = tc.openfield.openfield(epw_file=epw_file, idd_file=idd_file, material=\"CONCRETE\", shaded=True)\n",
+    "of_mrt = of.mrt.values\n",
+    "of_utci = of.utci.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {
     "code_folding": []
    },
@@ -243,7 +230,7 @@
    ],
    "source": [
     "# Load case recipe\n",
-    "_dir = Path(r\"C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\")\n",
+    "_dir = Path(r\"C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\")\n",
     "reload = False\n",
     "\n",
     "# Create output directory for generated images\n",
@@ -300,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MRT calculated and written to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\result.mrt\n"
+      "MRT calculated and written to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\result.mrt\n"
      ]
     }
    ],
@@ -338,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UTCI calculated and written to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\result.utci\n"
+      "UTCI calculated and written to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\result.utci\n"
      ]
     }
    ],
@@ -373,52 +360,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\openfield_comfortheatmap.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfortable_hours_may.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfortable_hours_october.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfortable_hours_annual.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\context.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\context_ptlabel.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\context_focuspts.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_annual_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_annual_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_annual_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_may_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_may_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_may_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_october_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_october_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\improvement_october_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_annual_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_annual_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_annual_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_may_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_may_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_may_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_october_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_october_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\comfort_october_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_annual_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_annual_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_annual_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_may_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_may_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_may_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_october_morningshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_october_afternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\reduction_october_morningafternoonshoulder.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\pt0000_reductionheatmap.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\pt0000_comfortheatmap.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\pt0000_profile_may.png\n",
-      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\pt0000_profile_october.png\n",
-      "Summary saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\FAMILYPARK1\\plots2\\shoulder_reduction_summary.csv\n"
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\openfield_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfortable_hours_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfortable_hours_october.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfortable_hours_annual.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\context.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\context_ptlabel.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\context_focuspts.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_annual_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_annual_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_annual_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_may_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_may_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_may_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_october_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_october_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\improvement_october_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_annual_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_annual_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_annual_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_may_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_may_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_may_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_october_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_october_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\comfort_october_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_annual_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_annual_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_annual_morningafternoonshoulder.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tgerrish\\Documents\\GitHub\\oshe\\oshe\\plot.py:290: UserWarning: No contour levels were found within the data range.\n",
+      "  levels=[-4, -3, -2, -1, 0, 1, 2, 3, 4], zorder=10, alpha=0.5)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_may_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_may_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_may_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_october_morningshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_october_afternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\reduction_october_morningafternoonshoulder.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0072_reductionheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0072_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0072_profile_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0072_profile_october.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0096_reductionheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0096_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0096_profile_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0096_profile_october.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0127_reductionheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0127_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0127_profile_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0127_profile_october.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0169_reductionheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0169_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0169_profile_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0169_profile_october.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0253_reductionheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0253_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0253_profile_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0253_profile_october.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0457_reductionheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0457_comfortheatmap.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0457_profile_may.png\n",
+      "Plot saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\pt0457_profile_october.png\n",
+      "Summary saved to C:\\Users\\tgerrish\\Desktop\\_0Ghadan21\\STREETFACELIFTS_P1\\plots2\\shoulder_reduction_summary.csv\n"
      ]
     }
    ],
@@ -427,7 +448,7 @@
     "utci = tc.plot.UTCI(of_utci, universal_thermal_climate_index, points)\n",
     "\n",
     "# Plot the results\n",
-    "utci.generate_plots(rad_files=rad_files, focus_pts=focus_pts, boundary=boundary, plot_directory=plot_directory)"
+    "utci.generate_plots(rad_files=rad_files, boundary=boundary, plot_directory=plot_directory, focus_pts=focus_pts)"
    ]
   },
   {
