eso reader prototype

--- a/Postprocess_redo.ipynb
+++ b/Postprocess_redo.ipynb
@@ -253,23 +253,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>GROUND_TOP_000</th>\n",
+       "      <th>GROUND_TOP_001</th>\n",
+       "      <th>GROUND_TOP_002</th>\n",
+       "      <th>GROUND_TOP_003</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Surface Outside Face Temperature [C]</th>\n",
+       "      <th>Surface Outside Face Temperature [C]</th>\n",
+       "      <th>Surface Outside Face Temperature [C]</th>\n",
+       "      <th>Surface Outside Face Temperature [C]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 00:30:00</th>\n",
+       "      <td>21.905950</td>\n",
+       "      <td>24.387647</td>\n",
+       "      <td>57.887938</td>\n",
+       "      <td>41.236128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 01:30:00</th>\n",
+       "      <td>21.905950</td>\n",
+       "      <td>24.387647</td>\n",
+       "      <td>57.887938</td>\n",
+       "      <td>41.236128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 02:30:00</th>\n",
+       "      <td>21.905950</td>\n",
+       "      <td>24.387647</td>\n",
+       "      <td>57.887938</td>\n",
+       "      <td>41.236128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 03:30:00</th>\n",
+       "      <td>21.905950</td>\n",
+       "      <td>24.387647</td>\n",
+       "      <td>57.887938</td>\n",
+       "      <td>41.236128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01 04:30:00</th>\n",
+       "      <td>21.075964</td>\n",
+       "      <td>26.660871</td>\n",
+       "      <td>58.976706</td>\n",
+       "      <td>39.359491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31 19:30:00</th>\n",
+       "      <td>25.478877</td>\n",
+       "      <td>49.414654</td>\n",
+       "      <td>48.644953</td>\n",
+       "      <td>27.428287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31 20:30:00</th>\n",
+       "      <td>24.614362</td>\n",
+       "      <td>54.426307</td>\n",
+       "      <td>44.382703</td>\n",
+       "      <td>26.574951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31 21:30:00</th>\n",
+       "      <td>24.614362</td>\n",
+       "      <td>54.426307</td>\n",
+       "      <td>44.382703</td>\n",
+       "      <td>26.574951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31 22:30:00</th>\n",
+       "      <td>24.614362</td>\n",
+       "      <td>54.426307</td>\n",
+       "      <td>44.382703</td>\n",
+       "      <td>26.574951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31 23:30:00</th>\n",
+       "      <td>24.614362</td>\n",
+       "      <td>54.426307</td>\n",
+       "      <td>44.382703</td>\n",
+       "      <td>26.574951</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8760 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[21.90594974, 21.90594974, 21.90594974, ..., 24.6143621 ,\n",
-       "        24.6143621 , 24.6143621 ],\n",
-       "       [24.38764736, 24.38764736, 24.38764736, ..., 54.42630747,\n",
-       "        54.42630747, 54.42630747],\n",
-       "       [57.88793838, 57.88793838, 57.88793838, ..., 44.38270252,\n",
-       "        44.38270252, 44.38270252],\n",
-       "       [41.23612757, 41.23612757, 41.23612757, ..., 26.57495083,\n",
-       "        26.57495083, 26.57495083]])"
+       "                                          GROUND_TOP_000  \\\n",
+       "                    Surface Outside Face Temperature [C]   \n",
+       "2018-01-01 00:30:00                            21.905950   \n",
+       "2018-01-01 01:30:00                            21.905950   \n",
+       "2018-01-01 02:30:00                            21.905950   \n",
+       "2018-01-01 03:30:00                            21.905950   \n",
+       "2018-01-01 04:30:00                            21.075964   \n",
+       "...                                                  ...   \n",
+       "2018-12-31 19:30:00                            25.478877   \n",
+       "2018-12-31 20:30:00                            24.614362   \n",
+       "2018-12-31 21:30:00                            24.614362   \n",
+       "2018-12-31 22:30:00                            24.614362   \n",
+       "2018-12-31 23:30:00                            24.614362   \n",
+       "\n",
+       "                                          GROUND_TOP_001  \\\n",
+       "                    Surface Outside Face Temperature [C]   \n",
+       "2018-01-01 00:30:00                            24.387647   \n",
+       "2018-01-01 01:30:00                            24.387647   \n",
+       "2018-01-01 02:30:00                            24.387647   \n",
+       "2018-01-01 03:30:00                            24.387647   \n",
+       "2018-01-01 04:30:00                            26.660871   \n",
+       "...                                                  ...   \n",
+       "2018-12-31 19:30:00                            49.414654   \n",
+       "2018-12-31 20:30:00                            54.426307   \n",
+       "2018-12-31 21:30:00                            54.426307   \n",
+       "2018-12-31 22:30:00                            54.426307   \n",
+       "2018-12-31 23:30:00                            54.426307   \n",
+       "\n",
+       "                                          GROUND_TOP_002  \\\n",
+       "                    Surface Outside Face Temperature [C]   \n",
+       "2018-01-01 00:30:00                            57.887938   \n",
+       "2018-01-01 01:30:00                            57.887938   \n",
+       "2018-01-01 02:30:00                            57.887938   \n",
+       "2018-01-01 03:30:00                            57.887938   \n",
+       "2018-01-01 04:30:00                            58.976706   \n",
+       "...                                                  ...   \n",
+       "2018-12-31 19:30:00                            48.644953   \n",
+       "2018-12-31 20:30:00                            44.382703   \n",
+       "2018-12-31 21:30:00                            44.382703   \n",
+       "2018-12-31 22:30:00                            44.382703   \n",
+       "2018-12-31 23:30:00                            44.382703   \n",
+       "\n",
+       "                                          GROUND_TOP_003  \n",
+       "                    Surface Outside Face Temperature [C]  \n",
+       "2018-01-01 00:30:00                            41.236128  \n",
+       "2018-01-01 01:30:00                            41.236128  \n",
+       "2018-01-01 02:30:00                            41.236128  \n",
+       "2018-01-01 03:30:00                            41.236128  \n",
+       "2018-01-01 04:30:00                            39.359491  \n",
+       "...                                                  ...  \n",
+       "2018-12-31 19:30:00                            27.428287  \n",
+       "2018-12-31 20:30:00                            26.574951  \n",
+       "2018-12-31 21:30:00                            26.574951  \n",
+       "2018-12-31 22:30:00                            26.574951  \n",
+       "2018-12-31 23:30:00                            26.574951  \n",
+       "\n",
+       "[8760 rows x 4 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,6 +450,8 @@
     "        self.creation_date = None\n",
     "        \n",
     "        self.read_eso()\n",
+    "        \n",
+    "        self.df = None\n",
     "    \n",
     "    def read_eso(self):\n",
     "        \n",
@@ -320,8 +486,12 @@
     "            data = [i.split(\",\")[1] for i in data[split_idx:-2] if len(i.split(\",\")) <= 2]\n",
     "            self.values = np.array(tc.helpers.chunks(data, n=n_vals)).astype(np.float64)\n",
     "\n",
+    "    def to_frame(self):\n",
+    "        idx = pd.date_range(\"2018-01-01 00:30:00\", freq=\"60T\", periods=8760)\n",
+    "        df = pd.DataFrame(data=self.values.T, index=idx, columns=pd.MultiIndex.from_arrays([self.objects, self.variables]))\n",
+    "        return df\n",
     "    \n",
-    "EsoFile(eso_file).values\n"
+    "EsoFile(eso_file).to_frame()\n"
    ]
   },
   {
